# fs-checking

./: .env.example  .gitignore  AGENTS.md  EVAL_LOG.md  pyproject.toml
docs/: AGENT_LOOP_DESIGN.md  EVAL_LOG.md
samples/: ERRORS_TO_VET.md  Written_test_Case.ground_truth.json  ar2019.mixed_s42.result.json  ar2019.mixed_s42.result_gpt52.json  ar2019.mixed_s42.result_pro.json  ar2019.mixed_s42.result_v2.json  ar2019.mixed_s42.result_v3.json  ar2019.mixed_s42.result_visual.json  ar2019.mixed_s42.result_visual_fs150.json  ar2019.mixed_s42.result_visual_fs150_r2.json
samples/ar2019/injected_s42/: ar2019.injected_s42.ground_truth.json
samples/ar2019/mixed_s42/: ar2019.mixed_s42.ground_truth.json
samples/ar2019/unrender/: ar2019_fs.injected.ground_truth.json  ar2019_fs.injected.md  ar2019_fs.md  ar2019_fs_face.md
schemas/: check_result.json
scripts/: __init__.py  annotate_findings.py  cli.py  inject_cli.py  inject_md_errors.py  robustness_analysis.py  scaling_synthesis.py  unrender.py  verify_errors.py
src/fs_checking/: __init__.py  agent_core.py  agent_loop.py  api.py  baseline.py  benchmark.py  benchmark_eval.py  detection.py  ensemble_sim.py  error_inject.py  eval.py  pdf_utils.py  prompts.py  rank_dedupe.py  swarm.py
src/fs_checking/strategies/: __init__.py
src/fs_checking/strategies/baseline/: __init__.py  baseline.py
src/fs_checking/strategies/ensemble/: __init__.py  __main__.py  ensemble.py
src/fs_checking/strategies/single_agent/: __init__.py  __main__.py  single_agent.py
src/fs_checking/strategies/swarm/: __init__.py  swarm.py
