[project]
name = "fs-checking"
version = "0.1.0"
description = "Financial statement checking with LLM swarm agents"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "click>=8.1",
    "jsonpatch>=1.33",
]

[project.scripts]
fs-check = "scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fs_checking", "scripts"]

[tool.hatch.build.targets.sdist]
include = ["src", "scripts"]
